<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.DetailPenginapanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_penginapan_poster"
                android:layout_width="match_parent"
                android:layout_height="438dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@tools:sample/backgrounds/scenic"/>

            <TextView
                android:id="@+id/tv_nama_penginapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="250dp"
                android:gravity="center_vertical"
                android:text="@string/nama_tempat"
                style="@style/nama_tempat_detail"
                />

            <RelativeLayout
                android:id="@+id/location"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="350dp"
                android:background="@drawable/ic_location"
                android:clipToOutline="true">
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_lokasi_penginapan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="63dp"
                android:layout_marginTop="350dp"
                android:gravity="center_vertical"
                android:alpha="0.88"
                android:text="@string/lokasi_tempat"
                style="@style/location"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/detail_penginapan"
                style="@style/detail_text"
                android:gravity="center"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_deskripsi_penginapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:padding="4dp"
            android:text="@string/deskripsi"
            style="@style/detail_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/htm"
                style="@style/detail_text"
                android:layout_marginRight="15dp"/>
            <TextView
                android:id="@+id/tv_htm_penginapan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/htm"
                style="@style/detail_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fasilitas"
                style="@style/detail_text"
                android:layout_marginRight="15dp"/>
            <TextView
                android:id="@+id/tv_fasilitas_penginapan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fasilitas"
                style="@style/detail_text"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>