<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="438dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@tools:sample/backgrounds/scenic"/>

            <TextView
                android:id="@+id/tv_nama_kuliner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="320dp"
                android:gravity="center_vertical"
                android:text="@string/nama_tempat"
                style="@style/nama_tempat_detail"
                />

            <RelativeLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="34dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="370dp"
                android:background="@drawable/ic_location"
                android:clipToOutline="true">
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="63dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="372dp"
                android:gravity="center_vertical"
                android:alpha="0.88"
                android:text="@string/lokasi_tempat"
                style="@style/location"
                />

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="392dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_favorite"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/detail_kuliner"
                style="@style/detail_text"
                android:gravity="center"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_desc_kuliner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:padding="4dp"
            android:text="@string/deskripsi"
            style="@style/detail_text"/>
    </LinearLayout>

</ScrollView>