<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ListFavorit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="752dp">

            <ImageView
                android:id="@+id/home_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-24dp"
                android:adjustViewBounds="true"
                android:background="@drawable/rectangle"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/liburankuy_"
                android:layout_width="221dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="628dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/title"
                android:textAppearance="@style/liburankuy_"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="65dp"
                android:background="@drawable/ic_baseline_favorite" />

            <TextView
                android:id="@+id/welcome_user"
                android:layout_width="110dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:gravity="center_vertical"
                android:text="@string/favorit"
                android:textAppearance="@style/favorit" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:background="@color/white"
                app:iconifiedByDefault="false"
                app:queryHint="Search" />

            <TextView
                android:layout_width="141dp"
                android:layout_height="29dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="190dp"
                android:gravity="center_horizontal"
                android:text="@string/pilihwisata"
                android:textAppearance="@style/pilihwisata"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/sidebarBtn"
                android:layout_width="37dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/ic_back" />

            <GridView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="220dp"
                android:id="@+id/grid_view"
                android:numColumns="2"/>

        </FrameLayout>
    </LinearLayout>
</ScrollView>